--- a/projects/py-flask/application/templates/index.html
+++ b/projects/py-flask/application/templates/index.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Names List</title>
+    <title>kishalay/cloud</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
-    <h1>Enter a Name</h1>
-    <form method="POST">
-        <input type="text" name="name" required>
-        <input type="submit" value="Submit">
-    </form>
-    <h2>Names List</h2>
-    <ul>
-        {% for name in names %}
-            <li>{{ name.name }}</li>
-        {% endfor %}
-    </ul>
+    <header>
+        <img src="../static/images/cover.png" alt="Cover Image" class="cover-image">
+    </header>
+    <div class="outercontainer">
+        <div class="container">
+            <h1>Enter a name</h1>
+            <form method="POST">
+                <input type="text" placeholder="Enter a name here" name="name" required>
+                <!-- <input type="submit" value="Submit"> -->
+                <button type="submit">Submit</button>
+            </form>
+            
+            <a href="http://localhost:5000/names">Go to Name List</a>
+        </div>        
+    </div>
+    <script src="../static/js/scripts.js"></script>
 </body>
 </html>
